##Text encoding: utf-8

2007-06-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/text.h: add gcp::Text::SetText (char const*).
	* libs/gcp/view.cc: add image/bmp as clipboard target and
	gcp::View::BuildPixbuf to support copying pixbufs.
	* libs/gcp/view.h: add gcp::View::BuildPixbuf.
	* libs/gcp/widgetdata.cc: implement copying pixbufs.

2007-05-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/cycles/cycletool.cc: fixed two bugs.
	[#19932] and [#19933].

2007-05-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/crystal/Makefile.am: add -DPIXMAPSDIR.
	* programs/crystal/window.cc: use logo in about box.

2007-05-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/help/paint/C/figures/Hposdlg.png: add documentation
	for the hydrogen position new feature.
	* docs/help/paint/C/gchempaint-unstable.xml: ditto.
	* plugins/paint/reactions/Makefile.am: added missing.

2007-05-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/macros.h: ensure GCU_CONF_GET_STRING returns
	a non NULL value if it is provided a default.

2007-05-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* AUTHORS: update list.
	* libs/gcp/application.cc:  don't add two extensions
	when saving as image.
	* programs/crystal/application.cc: initial work on CIF
	support.
	* programs/crystal/document.cc: ditto.
	* programs/crystal/document.h: ditto.

2007-05-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* glade/paint/H-pos.glade: fixed buttons names.
	* libs/gcp/Hposdlg.cc: force atom update after a change.
	* libs/gcp/atom.cc: fixed typo in Save and force update
	when loading.
	* templates/paint/haworth.xml.in: updated (Julian Sikorski).

2007-05-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* Makefile.am: remove pc file.
	* configure.ac: add reactions plugin.
	* gcu-unstable.pc.in: cleaned.
	* glade/paint/Makefile.am: add H-pos.glade. [#19842]
	* glade/paint/H-pos.glade: ditto.
	* glade/paint/preferences.glade: fixed bounds for